bk_ida/gccida/g0/do_SUBST_INT
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:944:6: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
if ( undobuf_0.frees ) 
     ^~~~~~~~~
     undobuf
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:946:7: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
buf = undobuf_0.frees; 
      ^~~~~~~~~
      undobuf
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:947:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:947:19: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
                  ^~~~~~~~~
                  undobuf
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:957:13: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
buf->next = undobuf_0.undos; 
            ^~~~~~~~~
            undobuf
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:958:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.undos = buf; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_SUBST_INT/src/obj/combine.o] Error 1
